--- a/locale/de.po
+++ b/locale/de.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-05-19 18:09+0200\n"
-"PO-Revision-Date: 2018-05-19 18:09+0200\n"
+"POT-Creation-Date: 2018-05-28 23:19+0200\n"
+"PO-Revision-Date: 2018-05-28 23:20+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: de\n"
@@ -28,10 +28,6 @@ msgstr "Holzkohle"
 #: coalburner.lua
 msgid "Ash"
 msgstr "Asche"
-
-#: init.lua
-msgid "Lighter"
-msgstr "Anzünder"
 
 #: meltingpot.lua
 msgid "Menu,Recipes,Pile,Burner"
@@ -90,20 +86,39 @@ msgid "Melting Guide"
 msgstr "Schmelzanleitung"
 
 #: meltingpot.lua
+msgid "Heat"
+msgstr "Hitze"
+
+#: meltingpot.lua
+msgid "Time"
+msgstr "Zeit"
+
+#: meltingpot.lua
 msgid "Cross-section"
 msgstr "Schnittbild"
 
 #: meltingpot.lua
-msgid "Melting Pot: heat="
-msgstr "Schmelztiegel: Hitze="
+msgid "Melting Pot active (heat="
+msgstr "Schmelztiegel aktiv (Hitze="
+
+#: meltingpot.lua
+msgid "Melting Pot inactive (heat="
+msgstr "Schmelztiegel inaktiv (Hitze="
 
 #: meltingpot.lua
 msgid "Melting Pot"
 msgstr "Schmelztiegel"
 
 #: meltingpot.lua
+msgid "Melting Pot inactive (heat=0)"
+msgstr "Schmelztiegel inaktiv (Hitze=0)"
+
+#: meltingpot.lua
 msgid "Melting"
 msgstr "Schmelzen"
+
+#~ msgid "Lighter"
+#~ msgstr "Anzünder"
 
 #~ msgid "Inventory"
 #~ msgstr "Inventory"
