almost first checkin

--- a/locale/de.po
+++ b/locale/de.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2018-05-28 23:19+0200\n"
-"PO-Revision-Date: 2018-05-28 23:20+0200\n"
+"POT-Creation-Date: 2018-05-29 23:31+0200\n"
+"PO-Revision-Date: 2018-05-29 23:32+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: de\n"
@@ -35,42 +35,41 @@ msgstr "Menü,Rezepte,Köhler,Brenner"
 
 #: meltingpot.lua
 msgid ""
-"Coal Pile Instructions:\n"
+"Coal Pile to produce charcoal:\n"
 "- build a 5x5 block dirt base\n"
 "- place a lighter in the centre\n"
 "- build a 3x3x3 wood cube around\n"
 "- cover all with dirt to a 5x5x5 cube\n"
 "- keep a hole to the lighter\n"
-"- ignite the lighter\n"
+"- ignite the lighter and immediately\n"
 "- close the pile with one wood and one dirt\n"
-"- wait until the smoke disappears\n"
-"- now you can open the pile"
+"- open the pile after the smoke disappeared"
 msgstr ""
-"Köhler Anleitung:\n"
-"- baue eine 5x5 Blöcke große Fläche aus Erde\n"
+"Köhler um Holzkohle zu produzieren:\n"
+"- baue eine 5x5 große Fläche aus Erde (dirt)\n"
 "- platziere einen Anzünder in die Mitte\n"
 "- baue einen 3x3x3 großen Holzwürfel darüber\n"
-"- decke alles mit Erde ab, zu einem 5x5x5 großen Block\n"
+"- decke alles mit Erde ab, zu einem 5x5x5 Block\n"
 "- lasse ein Loch zum Anzünder\n"
-"- zünde den Anzünder an\n"
+"- zünde den Anzünder an und\n"
 "- schließe das Loch mit Holz und Erde\n"
-"- warte bis der Rauch verschwindet\n"
-"- nun kannst du den Köhler öffnen"
+"- öffne den Köhler wenn der Rauch\n"
+"   verschwunden ist"
 
 #: meltingpot.lua
 msgid ""
-"Coal Burner Instructions:\n"
-"- build a cobble tower \n"
-"    (3x3 blocks base with variable height)\n"
+"Coal Burner to heat the melting pot:\n"
+"- build a 3x3xN cobble tower\n"
+"- more height means more flame heat   \n"
 "- keep a hole open on one side\n"
 "- put a lighter in\n"
 "- fill the tower from the top with charcoal\n"
 "- ignite the lighter\n"
-"- place the pot into the flame"
+"- place the pot in the flame"
 msgstr ""
-"Brenner Anleitung:\n"
-"- baue eine Steinturm mit einer 3x3\n"
-"    großen Grundfläche mit variabler Höhe\n"
+"Brenner zum Anheizen des Schmelztiegels:\n"
+"- baue eine 3x3xN großen Steinturm (cobble)\n"
+"- mehr Höhe bedeutet mehr Hitze\n"
 "- lasse an einer Seite ein Loch offen\n"
 "- lege einen Anzünder in den Turm\n"
 "- fülle den Turm von oben mit Holzkohle\n"
@@ -116,6 +115,10 @@ msgstr "Schmelztiegel inaktiv (Hitze=0)"
 #: meltingpot.lua
 msgid "Melting"
 msgstr "Schmelzen"
+
+#: meltingpot.lua
+msgid "Burning"
+msgstr "Brennen"
 
 #~ msgid "Lighter"
 #~ msgstr "Anzünder"
